@@ -1,5 +1,6 @@
 [CW20]
-Speak dialog: set all TTS Chunks' types to TEXT by default.
+* Speak dialog: set all TTS Chunks' types to TEXT by default.
+- SetMediaClockTimer dialog (v1): remove CLEAR update mode.
 
 [CW17]
 * Alert dialog (v1): hide Line 3 and Soft Buttons fields.
